# twitter-pipeline

./: Cargo.toml  docker-compose.yml  scheme.sql
frontend/: package.json
frontend/fakeapi/: index.js
frontend/src/: App.tsx  UserCard.tsx  api.ts
src/: lib.rs  main.rs  server.rs  twitter.rs
src/sql/: mod.rs  queue.rs  user_ids.rs
src/worker/: follow_back_worker.rs  invalid_user_remover.rs  message_listener.rs  mod.rs  relation_sync.rs  user_data_sync.rs  user_id_sync.rs
