[package]
name = "twitter-pipeline"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix = "0.11.1"
actix-web = "4.0.0-beta.6"
anyhow = "1.0.40"
async-trait = "0.1.50"
dotenv = "0.15.0"
egg-mode = { git="https://github.com/kenkoooo/egg-mode", branch="bugfix/fix_coordinates_serializer" }
env_logger = "0.8.3"
log = "0.4.14"
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5.2", features = ["postgres", "runtime-tokio-rustls", "json"] }
